--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;700&display=swap">
     <link rel="stylesheet" href="style.css">
-    <title>Test FE</title>
+    <title>FE-NextSky</title>
 </head>
 <body>
     <div class="layout">
@@ -37,8 +37,9 @@
                     <img src="./img/Logo.jpg">
                     <img src="./img/icon-menu.jpg">
                 </div>
+                <p>All Categories</p>
                 <form id="search-form">
-                    <input type="text" id="search-input" name="q" placeholder=" All Categories    |   Search in 200+ products...">
+                    <input type="text" id="search-input" name="q" placeholder="|       Search in 200+ products...">
                     <button type="submit" id="search-button">Search</button>
                 </form>
                 <div class="icon">
